--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Document</title>
 </head>
 <body align="center">
-	<a href=""></a>
-	<a href=""></a>
-	<a href=""></a>
+	<a href="#"></a>
+	<a href="#"></a>
+	<a href="#"></a>
 </body>
 </html>
