--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body align="center">
 	<a href="#">1</a>
 	<a href="#">2</a>
-	<a href="#">3</a>
+	<a href="maketer.html">homework</a>
 </body>
 </html>
