--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body align="center">
 	<a href="#">1</a>
-	<a href="#">2</a>
+	<a href="bootstrap.html">bootstrap-row</a>
 	<a href="maketer.html">homework</a>
 </body>
 </html>
