--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 			<div class="col-lg-12" id="_header" align="center">
 				<h1>Mountains</h1>
 			</div>
-			<div class="_all_props">
+<!-- 			<div class="_all_props">
 				<div class="col-lg-5 col-sm-10" id="_contentbox">
 					wdwe
 				</div>
 				<div class="col-lg-5 col-sm-10" id="_contentbox">
 					wdwe
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<!-- scripts -->
 		<script src="particles.js" defer></script>
