--- a/index.html
+++ b/index.html
@@ -1,91 +1,38 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="main.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>6 чудес Украины</title>
-		<link rel="stylesheet" media="screen" href="style.css">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		<!-- particles.js container -->
-		<div id="particles-js"></div>
-		<!-- content -->
-		<div class="main_folder">
-			<div class="col-lg-12" id="_header" align="center">
-				<h1>Необычные места в Украине</h1>
-			</div>
-			<div class="_all_props">
-				<div class="col-lg-5 col-sm-10 col-11" id="_contentbox1">
-					<h1>Олешковские пески, Херсонская область</h1>
-					<p>Олешковские пески – это 161 200 га горячего песчаного массива (210 000 га, если считать с массивами с растительностью). Это уникальное место еще называют Олешковской (или Алешковской) пустыней. На месте массива расположен одноименный Национальный природный парк.</p>
-					<p>
-						<div class="col-lg-6 col-sm-12 col-12" id="_href">
-							<h2><a href="content1.html">Детальніше ></a></h2>
-						</div>
-					</p>
-				</div>
-				<div class="col-lg-5 col-sm-10 col-11" id="_contentbox2">
-					<h1>Урицкие скалы, Тустань, Львовская область</h1>
-					<p>Когда-то Тустань была древнерусским оборонным комплексом, таможней и городом-крепостью. Природные скалы были соединены с деревянной архитектурой на высоте 40-80 м над уровнем долины, что делало крепость неприступной. Сейчас это место – памятка истории, археологии, архитектуры и природы и входит в Национальный историко-культурный заповедник "Тустань".</p>
-					<p>
-						<div class="col-lg-6 col-sm-12 col-12" id="_href">
-							<h2><a href="content2.html">Детальніше ></a></h2>
-						</div>
-					</p>
-				</div>
-				<div class="col-lg-5 col-sm-10 col-11" id="_contentbox3">
-					<h1>Днестровский каньон</h1>
-					<p>Днестровский каньон образован рекой Днестр и располагается на границу четырех областей – Ивано-Франковской, Тернопольской, Черновицкой и Хмельницкой. Длина каньона 250 км, он является одним из крупнейших в Европе и считается одним из семи природных чудес Украины.</p>
-					<p>
-						<div class="col-lg-6 col-sm-12 col-12" id="_href">
-							<h2><a href="content3.html">Детальніше ></a></h2>
-						</div>
-					</p>
-				</div>
-				<div class="col-lg-5 col-sm-10 col-11" id="_contentbox4">
-					<h1>Тоннель любви в Клевани, Ровенская область</h1>
-					<p>Тоннель любви в Клевани – ботанический феномен. Это место считается одним из самых романтических в Украине. Он образован деревьями и кустами, которые сплелись между собой в форме арки и проходит вдоль железнодорожной колеи между поселками Клевань и Оржев. Длина тоннеля – четыре километра.</p>
-					<p>
-						<div class="col-lg-6 col-sm-12 col-12" id="_href">
-							<h2><a href="content4.html">Детальніше ></a></h2>
-						</div>
-					</p>
-				</div>
-				<div class="col-lg-5 col-sm-10 col-11" id="_contentbox5">
-					<h1>Озеро Свитязь, Волынская область</h1>
-					<p>Озеро Свитязь входит в группу Шацких озер, а это более 30 водоемов. Свитязь считается самым большим и глубоким озером в Украине. Его площадь – 26,2 кв. км, а максимальная глубина – 58,4 м. Вода в озере очень чистая, в солнечную погоду просматривается на несколько метров. Примерно в центре озера есть небольшой остров.</p>
-					<p>
-						<div class="col-lg-6 col-sm-12 col-12" id="_href">
-							<h2><a href="content5.html">Детальніше ></a></h2>
-						</div>
-					</p>
-				</div>
-				<div class="col-lg-5 col-sm-10 col-11" id="_contentbox6">
-					<h1>Лемурийское озеро, Херсонская область</h1>
-					<p>Лемурийское озеро – это водоем на северном берегу Сиваша поблизости села Григоровка Херсонской области. Вода в нем имеет розовый цвет и, по сути, является рапой – насыщенным соляным раствором. Она содержит минералы, соли хлористого калия и магния, йодистого натрия и бромистого магния, за счет чего считается лечебной. </p>
-					<p>
-						<div class="col-lg-6 col-sm-12 col-12" id="_href">
-							<h2><a href="content6.html">Детальніше ></a></h2>
-						</div>
-					</p>
-				</div>
-			</div>
-			<div class="footer">
-				<div>
-					<h3>Источники:</h3>
-					<p><a href="https://www.segodnya.ua/ukraine/1032316-1032316.html"> </a>segodnya.ua</p>
-				</div>
-				<div>
-					<h3>Создатель:</h3>
-					<p>Гноєвий Артем</p>
-				</div>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>ClubVojage</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="style.css"></link>
+</head>
+<body>
+	<a href="index.html"><div class="col-lg-12" id="_logo_img">
+	</div></a>
+		<div class="row" align="center">
+		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="fly.html"><img src="fly.jpg" class="icon"><h1>Авіабілети</h1></a></div>
+		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="safety.html"><img src="safety.jpg" class="icon"><h1>Страхування</h1></a></div>
+		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="work.html"><img src="work.jpg" class="icon"><h1>Працевлаштування</h1></a></div>
+		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="study.html"><img src="study.jpg" class="icon"><h1>Освіта</h1></a></div>
+		</div>
+	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
+	</div>
+	<div class="row">
+		<div class="col-lg-4 col-sm-4" id="bottom" align="center">
+			<p>Про нас: </p>
+		</div>
+		<div class="col-lg-4 col-sm-4" id="bottom" align="center">
+			<p>+38 067 953 88 55 - Viber/WhatsApp</p>
+			<p>+38 095 746 89 10 - тел.</p>
+			<p>clubvojage@gmail.com - e-mail</p>
+		</div>
+		<div class="col-lg-4 col-sm-4" id="bottom" align="center">
+			<p>Адресса: </p>
+			<div class="col-lg-10 col-10" align="center">
 			</div>
 		</div>
-		<!-- scripts -->
-		<script src="particles.js" defer></script>
-		<script src="app.js" defer></script>
-	</body>
+	</div>
+</body>
 </html>
