--- a/fly.html
+++ b/fly.html
@@ -12,6 +12,7 @@
 	<a href="index.html"><div class="col-lg-12" id="_logo_img_fly">
 	</div></a>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
+		<h5 align="center">Авіабілети</h5>
 		<p>Послідовність заповнення форми: </p>
 		<p>Вкажіть місто вильоту та прибуття. Якщо не потребуете квитка назад — натисніть на відповідну кнопку під час вибору дати. Вкажіть кількість дорослих, дітей (від 2 до 12 років) та немовлят (віком до 2 років). Оберіть бізнес-клас, якщо потребуете. Натисніть галочку "Знайти готелі в новому вікні" для пошуку готелей у місті прибуття. Натисніть знайти квитки. </p>
 		<p>Корисні поради для заповнення форми:</p>
@@ -21,7 +22,7 @@
 			<li>Якщо з вами їдуть ще діти до 2 років, або діти від 2 до 12 років необхідна часткова оплата тарифу та окремі місця.</li>
 			<li>Ви можете обрати не тількі місто але й аеропорт прибуття.</li>
 			<li>У бізнес класі кількість місць менша, але вартість квитків та рівень комфорту вишчі.</li>
-			<li>Почніть пошук готелей паралельно з з купівлею квитків</li>
+			<li>Почніть пошук готелей паралельно з з купівлею квитків.</li>
 		</ul>
 	</div>
 </body>
