--- a/safety.html
+++ b/safety.html
@@ -12,7 +12,26 @@
 	<a href="index.html"><div class="col-lg-12" id="_logo_img_safety">
 	</div></a>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quo facilis repellat molestias explicabo nulla vitae perspiciatis eligendi reprehenderit, deleniti sit, error voluptas. Voluptate et libero ipsa praesentium eum dolore recusandae porro nostrum provident error minima iusto molestias necessitatibus itaque, veniam voluptatum eaque consequatur, officia quidem inventore nihil obcaecati dolorem reiciendis vel alias. Numquam aliquam officia laboriosam. Similique minus, omnis minima sunt nihil est sapiente necessitatibus voluptas ipsam ea recusandae vel incidunt mollitia magnam voluptates eaque porro illo. Blanditiis eligendi, voluptates itaque tempora consequatur omnis. Quae veritatis repudiandae unde non tempora possimus odit qui expedita totam esse magnam, a repellat et eaque, itaque eum temporibus minima molestias explicabo sit fuga ea quisquam. Aperiam id est iste eius atque rem inventore iure ab cupiditate optio dicta soluta expedita tenetur, fuga magnam, ratione vel. Deleniti distinctio nobis consequuntur sapiente, rerum odit magnam placeat, autem omnis non nesciunt veniam eos accusantium doloremque, suscipit nemo consectetur laudantium. Totam atque ipsam beatae expedita saepe omnis nam iusto odio quo reiciendis maxime, explicabo nobis odit. Voluptas sequi a quam quia rem eos, eligendi necessitatibus dignissimos ut ea rerum illo quas non facere quidem accusamus, voluptates enim! Eaque aliquid, dolores esse rerum reprehenderit, eum fuga cupiditate sequi quidem quae tempora eos cum, harum dolorem error omnis officia voluptatum a possimus maiores deleniti est numquam? Sunt est ad impedit reprehenderit, voluptate possimus veritatis consequuntur quia eum perspiciatis iure rem illum placeat facere tempore dolorum laudantium omnis! Eos maxime error ad, magnam tempore consectetur ipsum sint vero? Illo laborum quidem, ab minima natus atque nisi beatae, odio ipsa quod quo dolorem, voluptates enim id explicabo ullam nobis magnam et temporibus soluta, alias voluptate praesentium repudiandae? Labore quia laboriosam quaerat, tempora eveniet minus totam rerum veritatis dignissimos inventore autem incidunt iure eaque eius id, ea explicabo vitae assumenda sapiente pariatur.</p>
+		<h5 align="center">Страхування</h5>
+		<p>У нашій компанії ви можете оформити страховий поліс для виїжджаючіх за кордон.</p>
+		<p>Наші партнери - провідні компанії на ринку туристичного страхування:</p>
+		<ul>
+			<li><a href="https://shop.pzu.com.ua/info/description/tourist">PZU: https://shop.pzu.com.ua/info/description/tourist</a></li>
+			<li><a href="https://erv.ua/onlain-servis/kupit-	-onlain/">ERV: https://erv.ua/onlain-servis/kupit-	-onlain/</a></li>
+		</ul>
+		<p>По гіперпосиланням доступні онлайн калькулятори для попереднього обрахунку вартості страхового полісу в залежності від умов подорожі.</p>
+		<h5 align="center">Чому важливо подорожувати зі страховим полісом?</h5>
+		<p>За правилами перетину кордону наявність страхового полісу необхідна умова всіх, хто перетинає кордон!!! при відвідуванні будь-якої країни - з візовим режимом, спрощеним візовим режимом, або безвізом також необхідий страховий поліс.</p>
+		<h5 align="center">Медицинська допомога</h5>
+		<p>Медицинська допомога досить дороге задоволення, у випадку відсутності страхового полісу ви ризикуєте позбутися великої суми, якщо будете потребувати допомоги лікаря.У іншому випадку, за його наявності, ви будете впевнені що вам допоможуть.</p>
+		<h5 align="center">Типи страхування</h5>
+		<p>В  залежності від типу та тривалості подорожі існує декілька типів страхування:</p>
+		<ul>
+			<li>"Економ"</li>
+			<li>"Стандарт"</li>
+			<li>"Активний туризм"</li>
+			<p>Підібрати оптимальний пакет вам допоможуть наші менеджери.</p>
+		</ul>
 	</div>
 </body>
 </html>	
