--- a/work.html
+++ b/work.html
@@ -12,7 +12,21 @@
 	<a href="index.html"><div class="col-lg-12" id="_logo_img_work">
 	</div></a>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quo facilis repellat molestias explicabo nulla vitae perspiciatis eligendi reprehenderit, deleniti sit, error voluptas. Voluptate et libero ipsa praesentium eum dolore recusandae porro nostrum provident error minima iusto molestias necessitatibus itaque, veniam voluptatum eaque consequatur, officia quidem inventore nihil obcaecati dolorem reiciendis vel alias. Numquam aliquam officia laboriosam. Similique minus, omnis minima sunt nihil est sapiente necessitatibus voluptas ipsam ea recusandae vel incidunt mollitia magnam voluptates eaque porro illo. Blanditiis eligendi, voluptates itaque tempora consequatur omnis. Quae veritatis repudiandae unde non tempora possimus odit qui expedita totam esse magnam, a repellat et eaque, itaque eum temporibus minima molestias explicabo sit fuga ea quisquam. Aperiam id est iste eius atque rem inventore iure ab cupiditate optio dicta soluta expedita tenetur, fuga magnam, ratione vel. Deleniti distinctio nobis consequuntur sapiente, rerum odit magnam placeat, autem omnis non nesciunt veniam eos accusantium doloremque, suscipit nemo consectetur laudantium. Totam atque ipsam beatae expedita saepe omnis nam iusto odio quo reiciendis maxime, explicabo nobis odit. Voluptas sequi a quam quia rem eos, eligendi necessitatibus dignissimos ut ea rerum illo quas non facere quidem accusamus, voluptates enim! Eaque aliquid, dolores esse rerum reprehenderit, eum fuga cupiditate sequi quidem quae tempora eos cum, harum dolorem error omnis officia voluptatum a possimus maiores deleniti est numquam? Sunt est ad impedit reprehenderit, voluptate possimus veritatis consequuntur quia eum perspiciatis iure rem illum placeat facere tempore dolorum laudantium omnis! Eos maxime error ad, magnam tempore consectetur ipsum sint vero? Illo laborum quidem, ab minima natus atque nisi beatae, odio ipsa quod quo dolorem, voluptates enim id explicabo ullam nobis magnam et temporibus soluta, alias voluptate praesentium repudiandae? Labore quia laboriosam quaerat, tempora eveniet minus totam rerum veritatis dignissimos inventore autem incidunt iure eaque eius id, ea explicabo vitae assumenda sapiente pariatur.</p>
+		<h5 align="center">Працевлаштування</h5>
+		<p>Клуб ВОЯЖ пропонує найактуальніші вакансії на місця для роботи за кордоном. Ми зібрали найцікавіші пропозиції від європейських роботодавців. Ви напевно знайдете відповідний варіант, відповідний вашої кваліфікації і побажанням</p>
+		<p>У нас є робота за кордоном для українців, які опанували різними професіями.</p>
+		<ul>
+		<li>будівельні та ремонтні роботи;
+		<li>робота для кваліфікованих фахівців;
+		<li>робота на виробництві;
+		<li>збір рослинницької продукції;
+		<li>догляд за людьми, які досягли пенсійного віку;
+		<li>послуги з прибирання нерухомості;
+		<li>підсобні роботи.
+		</ul>
+<p>Наші співробітники допомагають кожному клієнту на всіх етапах працевлаштування. Ви легко оформите документи, отримаєте готові рішення для трансферу в країну, де будете заробляти, і назад.</p>
+<p>Отримайте нові можливості. Почніть заробляти більше, реалізуйте власний потенціал. Все, що потрібно - вибрати країну, в яку ви хочете відправитися, знайти підходящу вакансію зі списку і зателефонувати нам.
+Ми відповімо на всі ваші запитання. Детально розповімо про те, як підготуватися до нового для вас кроку - працевлаштування за кордоном.</p>
 	</div>
 </body>
 </html>	
