--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	<link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-	<a href="index.html"><div class="col-lg-12" id="_logo_img">
-	</div></a>
+	<div class="col-lg-12" id="_logo_img">
+	<p class="">робота</p>
+	</div>
 		<div class="row" align="center">
-		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="fly.html"><img src="fly.jpg" class="icon"><h1>Авіабілети</h1></a></div>
-		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="safety.html"><img src="safety.jpg" class="icon"><h1>Страхування</h1></a></div>
-		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="work.html"><img src="work.jpg" class="icon"><h1>Працевлаштування</h1></a></div>
-		<div class="col-12 col-sm-6 col-lg-3" id="log"><a href="study.html"><img src="study.jpg" class="icon"><h1>Освіта</h1></a></div>
+		<div class="col-12 col-md-6 col-lg-3" id="log"><a href="fly.html"><img src="fly.jpg" class="icon"><h3>Авіабілети</h3></a></div>
+		<div class="col-12 col-md-6 col-lg-3" id="log"><a href="safety.html"><img src="safety.jpg" class="icon"><h3>Страхування</h3></a></div>
+		<div class="col-12 col-md-6 col-lg-3" id="log"><a href="work.html"><img src="work.jpg" class="icon"><h3>Працевлаштування</h3></a></div>
+		<div class="col-12 col-md-6 col-lg-3" id="log"><a href="study.html"><img src="study.jpg" class="icon"><h3>Освіта</h3></a></div>
 		</div>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
 	</div>
@@ -29,7 +30,7 @@
 			<p>clubvojage@gmail.com - e-mail</p>
 		</div>
 		<div class="col-lg-4 col-sm-4" id="bottom" align="center">
-			<p>Адресса: </p>
+			<p>Адреса: </p>
 			<div class="col-lg-10 col-10" align="center">
 			</div>
 		</div>
