--- a/safety.html
+++ b/safety.html
@@ -9,8 +9,7 @@
 	<link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-	<a href="index.html"><div class="col-lg-12" id="_logo_img_safety">
-	</div></a>
+	<div class="col-lg-12" id="_logo_img_safety"></div>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
 		<h5 align="center">Страхування</h5>
 		<p>У нашій компанії ви можете оформити страховий поліс для виїжджаючіх за кордон.</p>
@@ -33,5 +32,6 @@
 			<p>Підібрати оптимальний пакет вам допоможуть наші менеджери.</p>
 		</ul>
 	</div>
+	<div class="col-8 col-sm-6 col-lg-4" id="back_botton"><a href="index.html"><h1>< На головну</h1></a></div>
 </body>
 </html>	
