--- a/study.html
+++ b/study.html
@@ -9,13 +9,13 @@
 	<link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-	<a href="index.html"><div class="col-lg-12" id="_logo_img_study">
-	</div></a>
+	<div class="col-lg-12" id="_logo_img_study"></div>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
 		<h5 align="center">Навчання за кордоном</h5>
 		<p>Навчання за кордоном - це, перед усім, безцінний досвід, що включае в себе знайомство з культурою іншого народу, здобування навичок та розширення кругозору. Також, кожний отримуе змогу розкрити свій потенціал, досконало оволодіти іноземною мовою та зробити успішну кар'єру в Європі.</p>
 		<p>Щоб отримати освіту за кордоном, для початку треба визначитись із країною, де ви плануете начатися та освітнім закладом.Одним з початкових етапів є вибір напряму навчання - це досить вагома складова, бо майбутня професія повинна приносити не тільки прибуток, але й задоволення.</p>
 		<p>Наша компанія пропонуе підтримку таконсультації на кожному етапі, забезпечуючі індивідуальний підхід до кожного клієнта. Наша мета - створити кожному можливість отримати освіту за кордоном.</p>
 	</div>
+	<div class="col-8 col-sm-6 col-lg-4" id="back_botton"><a href="index.html"><h1>< На головну</h1></a></div>
 </body>
 </html>	
