--- a/fly.html
+++ b/fly.html
@@ -9,8 +9,7 @@
 	<link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-	<a href="index.html"><div class="col-lg-12" id="_logo_img_fly">
-	</div></a>
+	<div class="col-lg-12" id="_logo_img_fly"></div>
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
 		<h5 align="center">Авіабілети</h5>
 		<p>Послідовність заповнення форми: </p>
@@ -25,5 +24,6 @@
 			<li>Почніть пошук готелей паралельно з з купівлею квитків.</li>
 		</ul>
 	</div>
+	<div class="col-8 col-sm-6 col-lg-4" id="back_botton"><a href="index.html"><h1>< На головну</h1></a></div>
 </body>
 </html>	
