--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="col-lg-12" id="_logo_img">
-	<p class="">робота</p>
+	<p class="phones"><b>Контактні телефони:<br>Туризм: (+380)67-953-88-55<br>Робота та освіта: (+380)67-442-46-70</b></p>
 	</div>
 		<div class="row" align="center">
 		<div class="col-12 col-md-6 col-lg-3" id="log"><a href="fly.html"><img src="fly.jpg" class="icon"><h3>Авіабілети</h3></a></div>
@@ -30,7 +30,7 @@
 			<p>clubvojage@gmail.com - e-mail</p>
 		</div>
 		<div class="col-lg-4 col-sm-4" id="bottom" align="center">
-			<p>Адреса: </p>
+			<p>Адреса:<br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2613.9258474251587!2d33.4205058156819!3d49.06904417930871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d75322debaaaab%3A0xe9590babfa9a41!2z0JrQu9GD0LEg0JLQvtGP0LYgLSDQotGD0YDQsNCz0LXQvdGC0YHRgtCy0L4!5e0!3m2!1sru!2sua!4v1559734055989!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="map"></iframe></p>
 			<div class="col-lg-10 col-10" align="center">
 			</div>
 		</div>
