--- a/work.html
+++ b/work.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-	<a href="index.html"><div class="col-lg-12" id="_logo_img_work">
-	</div></a>
+	<div class="col-lg-12" id="_logo_img_work"></div>
+
 	<div class="col-11 col-sm-9 col-lg-8" id="_1" align="center">
 		<h5 align="center">Працевлаштування</h5>
 		<p>Клуб ВОЯЖ пропонує найактуальніші вакансії на місця для роботи за кордоном. Ми зібрали найцікавіші пропозиції від європейських роботодавців. Ви напевно знайдете відповідний варіант, відповідний вашої кваліфікації і побажанням</p>
@@ -28,5 +28,6 @@
 <p>Отримайте нові можливості. Почніть заробляти більше, реалізуйте власний потенціал. Все, що потрібно - вибрати країну, в яку ви хочете відправитися, знайти підходящу вакансію зі списку і зателефонувати нам.
 Ми відповімо на всі ваші запитання. Детально розповімо про те, як підготуватися до нового для вас кроку - працевлаштування за кордоном.</p>
 	</div>
+		<div class="col-8 col-sm-6 col-lg-4" id="back_botton"><a href="index.html"><h1>< На головну</h1></a></div>
 </body>
 </html>	
